# unidad-7-programacion-reactiva-BenjaminDiazGarcia

ObserverPattern/: CMakeLists.txt  Circle.h  Component.cpp  Component.h  Event.h  Notification.h  Rectangle.h  Window.cpp  Window.h  main.cpp
